# TakeOff

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
src/takeoff/: __init__.py  main.py
src/takeoff/core/: __init__.py  config.py  logging.py
src/takeoff/utils/: ai_analyzer.py  web_scraper.py
tests/: conftest.py  test_main.py  test_pipeline.py
